classic search changes, gui changes, update mzlib

--- a/GUI/CalibrateTaskWindow.xaml
+++ b/GUI/CalibrateTaskWindow.xaml
@@ -94,7 +94,7 @@
                                     </StackPanel>
                                 </StackPanel>
                             </Grid>
-                            <CheckBox x:Name="conserveMemoryCheckBox" Content="Conserve memory (might be slow)" />
+                            <!--<CheckBox x:Name="conserveMemoryCheckBox" Content="Conserve memory (might be slow)" />-->
                             <StackPanel Orientation="Horizontal" Margin="5">
                                 <Label x:Name="ff" Content="Files to analyze in parallel" />
                                 <TextBox x:Name="maxDegreesOfParallelism" Width="45" />
