--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -229,10 +229,10 @@
                                     </StackPanel>
                                 </Grid>
                             </GroupBox>
-                            <StackPanel Orientation="Horizontal" Margin="5">
+                            <!--<StackPanel Orientation="Horizontal" Margin="5">
                                 <Label x:Name="ff" Content="Files to analyze in parallel" />
                                 <TextBox x:Name="maxDegreesOfParallelism" PreviewTextInput="PreviewIfInt" Width="45" />
-                            </StackPanel>
+                            </StackPanel>-->
                             <StackPanel Orientation="Horizontal" Margin="5">
                                 <Label x:Name="ffdf" Content="Minimum score allowed:" />
                                 <TextBox x:Name="minScoreAllowed" Width="45" />
