--- a/GUI/CalibrateTaskWindow.xaml
+++ b/GUI/CalibrateTaskWindow.xaml
@@ -94,11 +94,11 @@
                                     </StackPanel>
                                 </StackPanel>
                             </Grid>
-                            <CheckBox x:Name="conserveMemoryCheckBox" Content="Conserve memory (might be slow)" />
-                            <StackPanel Orientation="Horizontal" Margin="5">
+                            <!--<CheckBox x:Name="conserveMemoryCheckBox" Content="Conserve memory (might be slow)" />-->
+                            <!--<StackPanel Orientation="Horizontal" Margin="5">
                                 <Label x:Name="ff" Content="Files to analyze in parallel" />
                                 <TextBox x:Name="maxDegreesOfParallelism" Width="45" />
-                            </StackPanel>
+                            </StackPanel>-->
                             <StackPanel Orientation="Horizontal" Margin="5">
                                 <Label x:Name="ffdf" Content="Minimum score allowed:" />
                                 <TextBox x:Name="minScoreAllowed" Width="45" />
