--- a/GUI/CalibrateTaskWindow.xaml
+++ b/GUI/CalibrateTaskWindow.xaml
@@ -43,11 +43,26 @@
                 <GroupBox Header="Search Parameters" DockPanel.Dock="Top">
                     <Expander x:Name="SearchModeExpander">
                         <StackPanel>
-                            <StackPanel Orientation="Horizontal" Margin="5">
-                                <Label x:Name="precursorMassToleranceLabel" Content="Precursor Mass Tolerance" />
-                                <TextBox x:Name="precursorMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
-                                <ComboBox x:Name="precursorMassToleranceComboBox" HorizontalAlignment="Left" />
-                            </StackPanel>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1*" />
+                                    <ColumnDefinition Width="1*" />
+                                </Grid.ColumnDefinitions>
+                                <StackPanel>
+                                    <StackPanel Orientation="Horizontal" Margin="5">
+                                        <Label x:Name="precursorMassToleranceLabel" Content="Precursor Mass Tolerance" />
+                                        <TextBox x:Name="precursorMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
+                                        <ComboBox x:Name="precursorMassToleranceComboBox" HorizontalAlignment="Left" />
+                                    </StackPanel>
+                                </StackPanel>
+                                <StackPanel Grid.Column="1">
+                                    <StackPanel Orientation="Horizontal" Margin="5">
+                                        <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
+                                        <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
+                                        <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                                    </StackPanel>
+                                </StackPanel>
+                            </Grid>
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="1*" />
@@ -56,21 +71,21 @@
                                 <StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
                                         <Label x:Name="label1" Content="Max Missed Cleavages" />
-                                        <TextBox x:Name="missedCleavagesTextBox"  Width="45" />
+                                        <TextBox x:Name="missedCleavagesTextBox" PreviewTextInput="PreviewIfInt" Width="45" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
                                         <Label x:Name="label_Copy" Content="Protease" />
                                         <ComboBox x:Name="proteaseComboBox" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="label55_Copy" Content="Max Modification Isoforms" />
-                                        <TextBox x:Name="maxModificationIsoformsTextBox" Width="45" />
+                                        <Label x:Name="lblMinPeptideLength" Content="Min Peptide Len" />
+                                        <TextBox x:Name="txtMinPeptideLength" PreviewTextInput="PreviewIfInt" Width="45" />
+                                        <Label x:Name="lblMaxPeptideLength" Content="Max Peptide Len" />
+                                        <TextBox x:Name="txtMaxPeptideLength" PreviewTextInput="PreviewIfInt" Width="45" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="lblMinPeptideLength" Content="Min Peptide Len" />
-                                        <TextBox x:Name="txtMinPeptideLength"  Width="45" />
-                                        <Label x:Name="lblMaxPeptideLength" Content="Max Peptide Len" />
-                                        <TextBox x:Name="txtMaxPeptideLength"  Width="45" />
+                                        <Label x:Name="ffdf" Content="Minimum score allowed:" />
+                                        <TextBox x:Name="minScoreAllowed" Width="45" />
                                     </StackPanel>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1">
@@ -79,9 +94,8 @@
                                         <ComboBox x:Name="initiatorMethionineBehaviorComboBox" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
-                                        <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
-                                        <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                                        <Label x:Name="label55_Copy" Content="Max Modification Isoforms" />
+                                        <TextBox x:Name="maxModificationIsoformsTextBox" PreviewTextInput="PreviewIfInt" Width="45" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
                                         <Label x:Name="label4" Content="Ions to search" />
@@ -99,10 +113,6 @@
                                 <Label x:Name="ff" Content="Files to analyze in parallel" />
                                 <TextBox x:Name="maxDegreesOfParallelism" Width="45" />
                             </StackPanel>-->
-                            <StackPanel Orientation="Horizontal" Margin="5">
-                                <Label x:Name="ffdf" Content="Minimum score allowed:" />
-                                <TextBox x:Name="minScoreAllowed" Width="45" />
-                            </StackPanel>
                         </StackPanel>
                     </Expander>
                 </GroupBox>
