--- a/GUI/GPTMDTaskWindow.xaml
+++ b/GUI/GPTMDTaskWindow.xaml
@@ -57,7 +57,7 @@
                                 </StackPanel>
                                 <StackPanel Grid.Column="1">
                                     <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
+                                        <Label x:Name="productMassToleranceLabel" Content="Product Mass Tolerance" />
                                         <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
                                         <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
                                     </StackPanel>
@@ -70,11 +70,11 @@
                                 </Grid.ColumnDefinitions>
                                 <StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="label1" Content="Max Missed Cleavages" />
+                                        <Label x:Name="maxMissedCleavageLabel" Content="Max Missed Cleavages" />
                                         <TextBox x:Name="missedCleavagesTextBox" PreviewTextInput="PreviewIfInt" Width="45" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="label_Copy" Content="Protease" />
+                                        <Label x:Name="proteaseLabel" Content="Protease" />
                                         <ComboBox x:Name="proteaseComboBox" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
@@ -84,21 +84,21 @@
                                         <TextBox x:Name="txtMaxPeptideLength" PreviewTextInput="PreviewIfInt" Width="45" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="ffdf" Content="Minimum score allowed:" />
+                                        <Label x:Name="minimumScoreLabel" Content="Minimum score allowed:" />
                                         <TextBox x:Name="minScoreAllowed" Width="45" />
                                     </StackPanel>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1">
                                     <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="label1_Copy" Content="Initiator Methionine" />
+                                        <Label x:Name="initiatorMethionineLabel" Content="Initiator Methionine" />
                                         <ComboBox x:Name="initiatorMethionineBehaviorComboBox" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="label55_Copy" Content="Max Modification Isoforms" />
+                                        <Label x:Name="maxModificationIsoformsLabel" Content="Max Modification Isoforms" />
                                         <TextBox x:Name="maxModificationIsoformsTextBox" PreviewTextInput="PreviewIfInt" Width="45" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="label4" Content="Ions to search" />
+                                        <Label x:Name="ionsToSearchLabel" Content="Ions to search" />
                                         <CheckBox x:Name="bCheckBox" Content="b ions" />
                                         <CheckBox x:Name="yCheckBox" Content="y ions" />
                                     </StackPanel>
